--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
 
 <div class="gdoc-page__anchorwrap"><h4 id="master-students-硕士">Master Students (硕士):<a data-clipboard-text="" class="gdoc-page__anchor gdoc-page__anchor--right clip" aria-label="Anchor Master Students (硕士):" href="#master-students-硕士"><svg class="icon link"><use xlink:href="#link"></use></svg></a></h4></div>
 <ul>
-    <li><strong>何熠(Yi He,21级研究生)：</strong> 国家奖学金, IEEE/ACM TON(CCF A类期刊), IEEE IWQoS(CCF B类会议), ACM ICPP(CCF B类会议), HCIS(中科院二区)</li>
+    <li><strong>何熠(Yi He,21级研究生)：</strong> 国家奖学金, IEEE/ACM TON(CCF A类期刊), IEEE/ACM IWQoS(CCF B类会议), ACM ICPP(CCF B类会议), HCIS(中科院二区)</li>
     <li><strong>罗望卿(Wangqing Luo,21级研究生)：</strong> HCIS(中科院二区), IEEE ICA3PP(CCF C类会议)</li>
     <li><strong>饶淑莹(Shuying Rao,21级研究生)：</strong> 国家奖学金, IEEE TII(中科院一区), JNCA(中科院二区)</li>
     <li><strong>贺蔓(Man He,21级研究生)：</strong> IEEE ICA3PP(CCF C类会议,最佳论文)</li>
@@ -238,7 +238,7 @@
     <li><strong>周子凯(Zikai Zhou,22级研究生)：</strong> TNSM(中科院二区), IEEE ISPA(CCF C类会议)</li>
     <br>
 
-    <li><strong>申厚强(Houqiang Shen,23级研究生)：</strong> IEEE Network(中科院二区), CSA(国际会议), IWQoS(CCF B类会议)</li>
+    <li><strong>申厚强(Houqiang Shen,23级研究生)：</strong> IEEE Network(中科院二区), CSA(国际会议), IEEE/ACM IWQoS(CCF B类会议)</li>
     <li><strong>智睿(Rui Zhi,23级研究生)：</strong> IEEE ISPA(CCF C类会议), IEEE TII(中科院一区)</li>
     <li><strong>李睿谦(Ruiqian Li,23级研究生)：</strong> IEEE ISPA(CCF C类会议), Computer Network(CCF B类期刊)</li>
     <br>
